Add Owner observable
